# Paper-Recommender

./: .gitignore  README.md  pyproject.toml
config/: bot_config.yaml
src/paper_bot/: __init__.py  cli.py  domain_keywords.py  interactive_prefs.py  topic_taxonomy.py
src/paper_bot/connectors/: arxiv.py  base.py  openreview.py  papers_with_code.py  registry.py  semantic_scholar.py
src/paper_bot/exporters/: __init__.py  notion_exporter.py  obsidian_exporter.py  push_history_exporter.py  sheet_exporter.py
src/paper_bot/models/: paper.py
src/paper_bot/pipeline/: bot.py  feedback.py  ingest.py  push.py  quality.py  summary.py
src/paper_bot/storage/: sqlite_store.py
src/paper_bot/utils/: config.py  text.py
src/paper_reading_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
