[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-reading-assistant"
version = "0.1.0"
description = "Paper tracking bot for LLM reasoning/agent/post-training/RL."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "requests>=2.32.0",
  "openpyxl>=3.1.5",
]

[project.scripts]
paper-bot-run = "paper_bot.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
